--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <!--home section design-->
     <section class="home" id="home">
         <div class="homeContent">
-            <h3>Hello its me</h3>
+            <h3>Myself,</h3>
             <h1>Bisai Chhetri</h1>
-            <h3>And I am a <span>Front End Developer</span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In cum impedit ratione qui quae minus dolorem, eum voluptate aperiam? Blanditiis accusamus eum adipisci id est beatae porro delectus quae veniam?</p>
+            <h3>And I am a <span>currently studying</span></h3>
+            <p>Ambitious BSc.CSIT student from Pokhara, Nepal, skilled in JavaScript, C, C++, QBASIC, data entry, and graphic designing, eager to excel in the dynamic field of technology.</p>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/profile.php?id=100016363269489"><i class='bx bxl-facebook-circle' ></i></a>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKjfvNQQmWTCLtMQRpTZkvlqsjfRFwFZcdcHHrzSwXzFZBpCKQbqWGVXxxthgBBrmmMrxGV"><i class='bx bxl-gmail' ></i></a>
                 <a href="https://web.telegram.org/k/#@Twantyi"><i class='bx bxl-telegram'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="CV.png" download class="btn">Download CV</a>
         </div>
         <div class="homeImg">
             <img src="images/home1-min.png" alt="">
@@ -50,7 +50,7 @@
         <div class="aboutContent">
             <h2 class="heading">About <span> Me</span></h2>
             <h3>Front End Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem vero architecto quam corrupti error doloribus praesentium maiores nesciunt necessitatibus fugiat! Ipsa sapiente obcaecati inventore, facere laudantium quasi saepe eum possimus?</p>
+            <p>I am a dedicated and ambitious student pursuing my BSc.CSIT degree at Trubhuvan University, and I proudly call the charming city of Pokhara, Nepal, my home. With a keen interest in technology, I have cultivated a diverse skill set that includes proficiency in JavaScript, C, C++, and QBASIC, enabling me to tackle programming challenges with confidence. Moreover, I possess valuable talents in data entry and graphic designing, which allow me to explore various creative avenues. Eager to learn and passionate about innovation, I am constantly seeking new opportunities to expand my knowledge and expertise in the ever-evolving field of computer science and information technology. With a strong foundation and a hunger for growth, I am excited to embrace the future and make a meaningful contribution to the world of technology.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
@@ -62,20 +62,20 @@
             <div class="servicesBox">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima perspiciatis consequuntur, sequi quo dolore obcaecati fuga ullam est, eveniet laboriosam doloremque vel, deserunt facere. Ex nulla perspiciatis laboriosam repellat rerum!</p>
-                <a href="#" class="btn">Read More</a>
+                <p>As your front-end web developer, I'll create visually stunning and user-friendly websites that leave a lasting impact. Using HTML, CSS, and JavaScript, I ensure responsiveness and seamless performance across all devices, crafting a memorable user experience for your visitors. Let's elevate your online presence together.</p>
+                <a href="https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/" class="btn">Read More</a>
             </div>
             <div class="servicesBox">
                 <i class='bx bx-palette' ></i>
                 <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima perspiciatis consequuntur, sequi quo dolore obcaecati fuga ullam est, eveniet laboriosam doloremque vel, deserunt facere. Ex nulla perspiciatis laboriosam repellat rerum!</p>
-                <a href="#" class="btn">Read More</a>
+                <p>I provide creative graphic design services, crafting eye-catching logos, illustrations, and graphics that align with your brand. From marketing materials to social media posts, I deliver aesthetically pleasing visuals that make your business stand out. Let's collaborate and bring your vision to life.</p>
+                <a href="https://www.coursera.org/articles/what-does-a-graphic-designer-do" class="btn">Read More</a>
             </div>
             <div class="servicesBox">
                 <i class='bx bx-line-chart'></i>
-                <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima perspiciatis consequuntur, sequi quo dolore obcaecati fuga ullam est, eveniet laboriosam doloremque vel, deserunt facere. Ex nulla perspiciatis laboriosam repellat rerum!</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Data Entry</h3>
+                <p>As your data entry service provider, I offer accurate and efficient data management solutions. With meticulous attention to detail and fast turnaround, I handle large volumes of data with confidentiality. Let me take care of your data entry tasks while you focus on your core business activities.</p>
+                <a href="https://howigotjob.com/articles/what-is-data-entry/#:~:text=Today%E2%80%99s%20article%20is%20all%20about%20Data%20Entry.%20What,at%20the%20office%20location%20depending%20on%20the%20company." class="btn">Read More</a>
             </div>
             
         </div>
@@ -89,33 +89,42 @@
             <div class="portfolioBox">
                 <img src="images/portfolio.png" alt="" height="400" width="500">
                 <div class="portfolioLayer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, blanditiis? Blanditiis distinctio accusantium quia nulla corrupti quas expedita sint hic vero, facere molestiae sed, consequatur totam perspiciatis autem dolorum iste!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Project Solar System</h4>
+                    <p>This is a web project for calculating mass of a object in different planents including moon. Here You are able to enter mass of the object and then select planet to calculate the weight of the object in that respective planet.</p>
+                    <a href="https://bisai20i.github.io/solarsystem"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
             <div class="portfolioBox">
                 <img src="images/portfolio1.png" alt="" height="400" width="500">
                 <div class="portfolioLayer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, blanditiis? Blanditiis distinctio accusantium quia nulla corrupti quas expedita sint hic vero, facere molestiae sed, consequatur totam perspiciatis autem dolorum iste!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>World data statistics</h4>
+                    <p>In this project we can find the countries in the world sorted on the basis of their population and area. We can specify how many countries to display and also specify how to sort the data.</p>
+                    <a href="https://bisai20i.github.io/world"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
             <div class="portfolioBox">
                 <img src="images/portfolio2.png" alt="" height="400" width="500">
                 <div class="portfolioLayer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, blanditiis? Blanditiis distinctio accusantium quia nulla corrupti quas expedita sint hic vero, facere molestiae sed, consequatur totam perspiciatis autem dolorum iste!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Searching World Countries</h4>
+                    <p>This is also another web based project designed using HTML, JavaScript ans CSS. Here, first you have to login with proper details as asked then you can enter the main page. In main page there are all countries listed. Also you can search for the desired countries. However the project is still in development process.</p>
+                    <a href="https://bisai20i.github.io/com"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
             <div class="portfolioBox">
                 <img src="images/portfolio3.png" alt="" height="400" width="500">
                 <div class="portfolioLayer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, blanditiis? Blanditiis distinctio accusantium quia nulla corrupti quas expedita sint hic vero, facere molestiae sed, consequatur totam perspiciatis autem dolorum iste!</p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <h4>Snake game</h4>
+                    <p>It's the time for little fun. It is a classic snake game for refreshment. You have to use arrow keys to direct the snake. Then eventually eat the food, increaset the snake length and beat the high score. The movement of snake increases as time passes.</p>
+                    <p>Snake game for Android is Comming Soon.</p>
+                    <a href="https://bisai20i.github.io/snakegame"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolioBox">
+                <img src="images/portfolio4.png" alt="" height="400" width="500">
+                <div class="portfolioLayer">
+                    <h4>Web site for a Institute</h4>
+                    <p>This is a sample project of website of a institute. Explore this website to find features of it.</p>
+                    <a href="https://bisai20i.github.io/littlebells"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
         </div>
