--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <h4>Snake game Mobile</h4>
                     <p>It's the time for little fun. It is a classic snake game for refreshment. Its for Mobile Devices.</p>
                     
-                    <a href="https://bisai20i.github.io/snakegame"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://bisai20i.github.io/snakegameAndro"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
         </div>
