--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="aboutContent">
             <h2 class="heading">About <span> Me</span></h2>
             <h3>Front End Developer</h3>
-            <p>I am a dedicated and ambitious student pursuing my BSc.CSIT degree at Tribhuvan University, and I proudly call the charming city of Pokhara, Nepal, my home. With a keen interest in technology, I have cultivated a diverse skill set that includes proficiency in JavaScript, C, C++, and QBASIC, enabling me to tackle programming challenges with confidence. Moreover, I possess valuable talents in data entry and graphic designing, which allow me to explore various creative avenues. Eager to learn and passionate about innovation, I am constantly seeking new opportunities to expand my knowledge and expertise in the ever-evolving field of computer science and information technology. With a strong foundation and a hunger for growth, I am excited to embrace the future and make a meaningful contribution to the world of technology.</p>
+            <p>I am a dedicated and ambitious student pursuing my BSc.CSIT degree at Trubhuvan University, and I proudly call the charming city of Pokhara, Nepal, my home. With a keen interest in technology, I have cultivated a diverse skill set that includes proficiency in JavaScript, C, C++, and QBASIC, enabling me to tackle programming challenges with confidence. Moreover, I possess valuable talents in data entry and graphic designing, which allow me to explore various creative avenues. Eager to learn and passionate about innovation, I am constantly seeking new opportunities to expand my knowledge and expertise in the ever-evolving field of computer science and information technology. With a strong foundation and a hunger for growth, I am excited to embrace the future and make a meaningful contribution to the world of technology.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
@@ -134,6 +134,15 @@
                     <p>It's the time for little fun. It is a classic snake game for refreshment. Its for Mobile Devices.</p>
                     
                     <a href="https://bisai20i.github.io/snakegameAndro"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolioBox">
+                <img src="images/portfolio5.png" alt="" height="400" width="500">
+                <div class="portfolioLayer">
+                    <h4>TextUtils App - React</h4>
+                    <p>Enjoy playing with your text.</p>
+                    
+                    <a href="https://bisai20i.github.io/getting_started"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
         </div>
