--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="homeContent">
             <h3>Myself,</h3>
             <h1>Bisai Chhetri</h1>
-            <h3>And I am a <span>currently studying</span></h3>
+            <h3>And I am  <span>currently studying</span></h3>
             <p>Ambitious BSc.CSIT student from Pokhara, Nepal, skilled in JavaScript, C, C++, QBASIC, data entry, and graphic designing, eager to excel in the dynamic field of technology.</p>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/profile.php?id=100016363269489"><i class='bx bxl-facebook-circle' ></i></a>
@@ -45,7 +45,7 @@
     <!--about section design-->
     <section class="about" id="about">
         <div class="aboutImg">
-            <img src="images/home.png" alt="" height="500" width="500">
+            <img src="images/home.png" alt="">
         </div>
         <div class="aboutContent">
             <h2 class="heading">About <span> Me</span></h2>
@@ -156,8 +156,8 @@
             <div class="contact1">
                 <h4>You can <span>contact me</span> Via</h4>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKjfvNQQmWTCLtMQRpTZkvlqsjfRFwFZcdcHHrzSwXzFZBpCKQbqWGVXxxthgBBrmmMrxGV"><i class='bx bxl-gmail' ></i><p>xettri.bsai@gmail.com</p></a>
-                <a onclick="redirectToPhoneApp()"><i class='bx bxs-phone' ></i> <p>+977 9846200565</p></a>
-                <a href="https://www.facebook.com/profile.php?id=100016363269489"><i class='bx bxl-facebook-circle'></i> <p>facebook</p></a>
+                <a onclick="redirectToPhoneApp()"><i class='bx bxs-phone' ></i> <p>+977 9846-200565</p></a>
+                <a href="https://www.facebook.com/profile.php?id=100016363269489"><i class='bx bxl-facebook-circle'></i> <p>Facebook</p></a>
                 <a onclick="redirectToWhatsApp(9846200565)"><i class='bx bxl-whatsapp' ></i> <p>Whatsapp</p></a>
 
             </div>
