--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Welcome to the official website of Bisai Chhetri. Explore Bisai's achievements, experiences, and professional journey. Stay updated with the latest news and insights. Connect with Bisai Chhetri for a glimpse into a world of innovation and excellence.">
+    <meta name="description" content="Ambitious BSc.CSIT student from Pokhara, Nepal, with strong skills in JavaScript, C, C++, QBASIC, data entry, and graphic designing. Eager to excel in the dynamic field of technology. Explore my profile for a blend of academic prowess and versatile technical expertise.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
