--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Welcome to the official website of Bisai Chhetri. Explore Bisai's achievements, experiences, and professional journey. Stay updated with the latest news and insights. Connect with Bisai Chhetri for a glimpse into a world of innovation and excellence.">
-    <meta name="description" content="Ambitious BSc.CSIT student from Pokhara, Nepal, with strong skills in JavaScript, C, C++, QBASIC, data entry, and graphic designing. Eager to excel in the dynamic field of technology. Explore my profile for a blend of academic prowess and versatile technical expertise.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to the official website of Bisai Chhetri, an ambitious BSc.CSIT student from Pokhara, Nepal. Explore Bisai's achievements, experiences, and professional journey. Stay updated with the latest news and insights. Connect with Bisai for a glimpse into a world of innovation and excellence.">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logo.png">
+    <link rel="canonical" href="https://bisai20i.github.io/portfolio/">
+
     <title>Portfolio</title>
 </head>
 <body>
@@ -32,11 +32,12 @@
             <h3>And I am  <span>currently studying</span></h3>
             <p>Ambitious BSc.CSIT student from Pokhara, Nepal, skilled in JavaScript, C, C++, QBASIC, data entry, and graphic designing, eager to excel in the dynamic field of technology.</p>
             <div class="socialMedia">
-                <a href="https://www.facebook.com/profile.php?id=100016363269489"><i class='bx bxl-facebook-circle' ></i></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKjfvNQQmWTCLtMQRpTZkvlqsjfRFwFZcdcHHrzSwXzFZBpCKQbqWGVXxxthgBBrmmMrxGV"><i class='bx bxl-gmail' ></i></a>
-                <a href="https://web.telegram.org/k/#@Twantyi"><i class='bx bxl-telegram'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100016363269489" aria-label="Facebook"><i class='bx bxl-facebook-circle' ></i></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKjfvNQQmWTCLtMQRpTZkvlqsjfRFwFZcdcHHrzSwXzFZBpCKQbqWGVXxxthgBBrmmMrxGV" aria-label="Gmail"><i class='bx bxl-gmail' ></i></a>
+                <a href="https://web.telegram.org/k/#@Twantyi" aria-label="Telegram"><i class='bx bxl-telegram'></i></a>
+
             </div>
-            <a href="CV.png" download class="btn">Download CV</a>
+            <a href="CV.png" download class="btn" aria-label="Download CV">Download CV</a>
         </div>
         <div class="homeImg">
             <img src="images/home1-min.png" alt="">
@@ -255,5 +256,21 @@ function redirectToPhoneApp() {
     }
 
   </script>
+    <script type="application/ld+json">
+   {
+     "@context": "http://schema.org",
+     "@type": "Person",
+     "name": "Bisai Chhetri",
+     "jobTitle": "BSc.CSIT Student",
+     "address": {
+       "@type": "PostalAddress",
+       "addressLocality": "Pokhara",
+       "addressRegion": "Gandaki",
+       "addressCountry": "Nepal"
+     },
+     "email": "xettri.bsai@gmail.com"
+   }
+</script>
+
 </body>
 </html>
