--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Welcome to the official website of Bisai Chhetri, an ambitious BSc.CSIT student from Pokhara, Nepal. Explore Bisai's achievements, experiences, and professional journey. Stay updated with the latest news and insights. Connect with Bisai for a glimpse into a world of innovation and excellence.">
     <link rel="stylesheet" href="style.css">
