--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bisai Chhetri,Bsai, Bisai,Bisai Bhushan, IT student, Laravel developer, React developer, Front-end design, Graphic design portfolio, Web development, Full-stack developer, Portfolio website, Software engineer, Creative designer, UI/UX design, Modern web development, Laravel projects, React projects, Graphic design works, Tech portfolio, Innovative solutions, Freelance developer, IT projects">
+    <meta name="description" content="Welcome to Bisai Chhetri's portfolio! Explore my expertise in Laravel, React, Front-end development, Graphic design, and more. Discover innovative projects, creative designs, and cutting-edge web development solutions tailored for the modern era.">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="animation.css">
